--- a/Projeto1/codigo/Makefile
+++ b/Projeto1/codigo/Makefile
@@ -2,6 +2,6 @@ FLAGS=-lncurses -lpthread -std=c++11
 
 all: model
 
-model: model_mainloop.cpp oo_model.cpp oo_model.hpp listComida.cpp gameController.cpp
-	g++ -omodel model_mainloop.cpp oo_model.cpp listComida.cpp gameController.cpp $(FLAGS)
+model: model_mainloop.cpp oo_model.cpp oo_model.hpp listComida.cpp gameController.cpp player.cpp fisica.cpp
+	g++ -omodel model_mainloop.cpp oo_model.cpp listComida.cpp gameController.cpp player.cpp fisica.cpp $(FLAGS)
 	./model
