Serialized player and scenario information

--- a/ProjetoFinal/Makefile
+++ b/ProjetoFinal/Makefile
@@ -5,7 +5,7 @@ BIB := $(wildcard src/*.hpp)
 all: server client
 
 server: $(SRC_SERVER) $(BIB)
-	g++ $(SRC_SERVER) -o server -std=c++11 -lncurses -lpthread -lportaudio
+	g++ $(SRC_SERVER) -o server -std=gnu++11 -lncurses -lpthread -lportaudio
 
 client: $(SRC_CLIENT) $(BIB)
 	g++ $(SRC_CLIENT) -o client -std=c++11 -lncurses -lpthread -lportaudio
